force-app/main/default/objects/Cost_Center__c/Cost_Center__c.object-meta.xml
<CustomObject>
    <label>Cost Center</label>
    <nameField>
        <label>Cost Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>