force-app/main/default/objects/Cost_Center__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Cost center(This field was created for NPL MA).</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>