force-app/main/default/objects/Cost_Center__c/fields/LockIndicator__c.field-meta.xml
<CustomField>
    <fullName>LockIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the record Locked(This field was created for NPL MA).</description>
    <label>LockIndicator</label>
    <type>Checkbox</type>
</CustomField>