force-app/main/default/objects/Cost_Center__c/fields/NPLMA_SAP_Cost_Center_Id__c.field-meta.xml
<CustomField>
    <fullName>NPLMA_SAP_Cost_Center_Id__c</fullName>
    <externalId>true</externalId>
    <label>NPLMA SAP Cost Center Id</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>