force-app/main/default/objects/Cost_Center__c/fields/PersonResponsible__c.field-meta.xml
<CustomField>
    <fullName>PersonResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee record(This field was created for NPL MA).</description>
    <label>Person Responsible</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Cost Centers Person Responsible</relationshipLabel>
    <relationshipName>Cost_Centers_PersonResponsible</relationshipName>
    <type>Lookup</type>
</CustomField>