force-app/main/default/objects/Cost_Center__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Profit centre(This field was created for NPL MA).</description>
    <label>Profit Center</label>
    <referenceTo>Profit_Center__c</referenceTo>
    <relationshipLabel>Cost Centers</relationshipLabel>
    <relationshipName>Cost_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>