force-app/main/default/objects/Cost_Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Profit_Center__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LockIndicator__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>